K1J-1447: Publish analytics message for incoming message for cs certificates